// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClientTroubleshootingTab should render correctly with search params 1`] = `
<DocumentFragment>
  <div
    class="ant-row"
    style="margin: -8px -8px -8px -8px;"
  >
    <div
      class="ant-col ant-col-18"
      style="padding: 8px 8px 8px 8px;"
    >
      <div
        class="ant-row"
        style="margin: -8px -8px -8px -8px; justify-content: end;"
      >
        <div
          class="ant-col ant-col-15"
          style="padding: 8px 8px 8px 8px;"
        >
          <div
            class="ant-row"
            style="margin: -3px -3px -3px -3px; justify-content: end;"
          >
            <div
              class="ant-col ant-col-8"
              style="padding: 3px 3px 3px 3px;"
            >
              <div
                class="ant-select ant-cascader styledComponents__Cascader-sc-9z6ynb-0 iuIJOH ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                style="max-width: 165px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      aria-hidden="true"
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-rest"
                      style="opacity: 0; height: 0px; overflow-y: hidden; order: 9007199254740991; pointer-events: none; position: absolute;"
                    >
                      <span
                        class="ant-select-selection-item"
                      >
                        <span
                          class="ant-select-selection-item-content"
                        >
                          <div
                            title="Performance"
                          >
                            2 items selected
                          </div>
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1; order: 0;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  aria-hidden="true"
                  class="ant-select-clear"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="close-circle"
                    class="anticon anticon-close-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
            <div
              class="ant-col ant-col-8"
              style="padding: 3px 3px 3px 3px;"
            >
              <div
                class="ant-select ant-cascader styledComponents__Cascader-sc-9z6ynb-0 iuIJOH ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                style="max-width: 165px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1; order: 0;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                  <span
                    class="ant-select-selection-placeholder"
                  >
                    All Types
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
            <div
              class="ant-col ant-col-8"
              style="padding: 3px 3px 3px 3px;"
            >
              <div
                class="ant-select ant-cascader styledComponents__Cascader-sc-9z6ynb-0 iuIJOH ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                style="max-width: 165px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1; order: 0;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                  <span
                    class="ant-select-selection-placeholder"
                  >
                    All Radios
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-24"
          style="padding: 8px 8px 8px 8px;"
        >
          <div
            class="ant-collapse ant-collapse-icon-position-start ant-collapse-borderless ant-collapse-ghost"
          >
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="styledComponents__StyledPlusSquareOutlined-sc-hmshlr-7 iWQXdq ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  <span
                    class="styledComponents__TimelineTitle-sc-hmshlr-9 dVavPp"
                  >
                    Connection Events
                  </span>
                </span>
              </div>
            </div>
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="styledComponents__StyledPlusSquareOutlined-sc-hmshlr-7 iWQXdq ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  <span
                    class="styledComponents__TimelineTitle-sc-hmshlr-9 dVavPp"
                  >
                    Roaming
                  </span>
                </span>
              </div>
            </div>
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="styledComponents__StyledPlusSquareOutlined-sc-hmshlr-7 iWQXdq ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  <span
                    class="styledComponents__TimelineTitle-sc-hmshlr-9 dVavPp"
                  >
                    Connection Quality
                  </span>
                </span>
              </div>
            </div>
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="styledComponents__StyledPlusSquareOutlined-sc-hmshlr-7 iWQXdq ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  <span
                    class="styledComponents__TimelineTitle-sc-hmshlr-9 dVavPp"
                  >
                    Network Incidents
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-6"
      style="padding: 8px 8px 8px 8px;"
    >
      <div
        class="styledComponents__History-sc-hmshlr-0 fbrcHL"
      >
        <div
          class="styledComponents__HistoryHeader-sc-hmshlr-1 gxxomy"
        >
          <span
            class="styledComponents__HistoryContentTitle-sc-hmshlr-3 kdrcWS"
          >
            History
          </span>
          <span
            class="styledComponents__HistoryIcon-sc-hmshlr-4 bpPEdb"
          >
            <svg
              data-testid="ArrowExpand"
              style="transform: rotate(180deg); cursor: pointer; line-height: 20px;"
            />
          </span>
        </div>
        <div
          class="styledComponents__HistoryContent-sc-hmshlr-2 cUGlmL"
        >
          <div
            class="ant-list ant-list-split"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <ul
                  class="ant-list-items"
                >
                  <li
                    class="ant-list-item"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <span
                          class="styledComponents__EventTypeIcon-sc-hmshlr-5 haoSVP"
                          color="--acx-semantics-green-50"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          06/07/2022 11:21:48
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          Infrastructure (Service availabilty)
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <span
                          class="styledComponents__EventTypeIcon-sc-hmshlr-5 wBlry"
                          color="--acx-neutrals-50"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          06/07/2022 11:21:48
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          Client assiocated (802.11) @ Home_R860 (AA:BB:CC:DD:FF:GG)
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <span
                          class="styledComponents__IncidentEvent-sc-hmshlr-6 hEsQOF"
                          color="--acx-semantics-red-50"
                        >
                          P1
                        </span>
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          06/07/2022 11:21:48
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          Client assiocated (802.11) @ Home_R860 (AA:BB:CC:DD:FF:GG)
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ClientTroubleshootingTab should render correctly without search params 1`] = `
<DocumentFragment>
  <div
    class="ant-row"
    style="margin: -8px -8px -8px -8px;"
  >
    <div
      class="ant-col ant-col-18"
      style="padding: 8px 8px 8px 8px;"
    >
      <div
        class="ant-row"
        style="margin: -8px -8px -8px -8px; justify-content: end;"
      >
        <div
          class="ant-col ant-col-15"
          style="padding: 8px 8px 8px 8px;"
        >
          <div
            class="ant-row"
            style="margin: -3px -3px -3px -3px; justify-content: end;"
          >
            <div
              class="ant-col ant-col-8"
              style="padding: 3px 3px 3px 3px;"
            >
              <div
                class="ant-select ant-cascader styledComponents__Cascader-sc-9z6ynb-0 iuIJOH ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                style="max-width: 165px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1; order: 0;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                  <span
                    class="ant-select-selection-placeholder"
                  >
                    All Categories
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
            <div
              class="ant-col ant-col-8"
              style="padding: 3px 3px 3px 3px;"
            >
              <div
                class="ant-select ant-cascader styledComponents__Cascader-sc-9z6ynb-0 iuIJOH ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                style="max-width: 165px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1; order: 0;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                  <span
                    class="ant-select-selection-placeholder"
                  >
                    All Types
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
            <div
              class="ant-col ant-col-8"
              style="padding: 3px 3px 3px 3px;"
            >
              <div
                class="ant-select ant-cascader styledComponents__Cascader-sc-9z6ynb-0 iuIJOH ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                style="max-width: 165px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1; order: 0;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                  <span
                    class="ant-select-selection-placeholder"
                  >
                    All Radios
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-24"
          style="padding: 8px 8px 8px 8px;"
        >
          <div
            class="ant-collapse ant-collapse-icon-position-start ant-collapse-borderless ant-collapse-ghost"
          >
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="styledComponents__StyledPlusSquareOutlined-sc-hmshlr-7 iWQXdq ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  <span
                    class="styledComponents__TimelineTitle-sc-hmshlr-9 dVavPp"
                  >
                    Connection Events
                  </span>
                </span>
              </div>
            </div>
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="styledComponents__StyledPlusSquareOutlined-sc-hmshlr-7 iWQXdq ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  <span
                    class="styledComponents__TimelineTitle-sc-hmshlr-9 dVavPp"
                  >
                    Roaming
                  </span>
                </span>
              </div>
            </div>
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="styledComponents__StyledPlusSquareOutlined-sc-hmshlr-7 iWQXdq ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  <span
                    class="styledComponents__TimelineTitle-sc-hmshlr-9 dVavPp"
                  >
                    Connection Quality
                  </span>
                </span>
              </div>
            </div>
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="styledComponents__StyledPlusSquareOutlined-sc-hmshlr-7 iWQXdq ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  <span
                    class="styledComponents__TimelineTitle-sc-hmshlr-9 dVavPp"
                  >
                    Network Incidents
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-6"
      style="padding: 8px 8px 8px 8px;"
    >
      <div
        class="styledComponents__History-sc-hmshlr-0 fbrcHL"
      >
        <div
          class="styledComponents__HistoryHeader-sc-hmshlr-1 gxxomy"
        >
          <span
            class="styledComponents__HistoryContentTitle-sc-hmshlr-3 kdrcWS"
          >
            History
          </span>
          <span
            class="styledComponents__HistoryIcon-sc-hmshlr-4 bpPEdb"
          >
            <svg
              data-testid="ArrowExpand"
              style="transform: rotate(180deg); cursor: pointer; line-height: 20px;"
            />
          </span>
        </div>
        <div
          class="styledComponents__HistoryContent-sc-hmshlr-2 cUGlmL"
        >
          <div
            class="ant-list ant-list-split"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <ul
                  class="ant-list-items"
                >
                  <li
                    class="ant-list-item"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <span
                          class="styledComponents__EventTypeIcon-sc-hmshlr-5 haoSVP"
                          color="--acx-semantics-green-50"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          06/07/2022 11:21:48
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          Infrastructure (Service availabilty)
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <span
                          class="styledComponents__EventTypeIcon-sc-hmshlr-5 wBlry"
                          color="--acx-neutrals-50"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          06/07/2022 11:21:48
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          Client assiocated (802.11) @ Home_R860 (AA:BB:CC:DD:FF:GG)
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <span
                          class="styledComponents__IncidentEvent-sc-hmshlr-6 hEsQOF"
                          color="--acx-semantics-red-50"
                        >
                          P1
                        </span>
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          06/07/2022 11:21:48
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          Client assiocated (802.11) @ Home_R860 (AA:BB:CC:DD:FF:GG)
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ClientTroubleshootingTab should set search param on option selection 1`] = `
<DocumentFragment>
  <div
    class="ant-row"
    style="margin: -8px -8px -8px -8px;"
  >
    <div
      class="ant-col ant-col-18"
      style="padding: 8px 8px 8px 8px;"
    >
      <div
        class="ant-row"
        style="margin: -8px -8px -8px -8px; justify-content: end;"
      >
        <div
          class="ant-col ant-col-15"
          style="padding: 8px 8px 8px 8px;"
        >
          <div
            class="ant-row"
            style="margin: -3px -3px -3px -3px; justify-content: end;"
          >
            <div
              class="ant-col ant-col-8"
              style="padding: 3px 3px 3px 3px;"
            >
              <div
                class="ant-select ant-cascader styledComponents__Cascader-sc-9z6ynb-0 iuIJOH ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                style="max-width: 165px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      aria-hidden="true"
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-rest"
                      style="opacity: 0; height: 0px; overflow-y: hidden; order: 9007199254740991; pointer-events: none; position: absolute;"
                    >
                      <span
                        class="ant-select-selection-item"
                      >
                        <span
                          class="ant-select-selection-item-content"
                        >
                          <div
                            title="Performance"
                          >
                            1 items selected
                          </div>
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1; order: 0;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  style="position: absolute; top: 0px; left: 0px; width: 100%;"
                >
                  <div>
                    <div
                      class="ant-select-dropdown ant-cascader-dropdown ant-select-dropdown-hidden"
                      style="min-width: auto; pointer-events: none;"
                    >
                      <div>
                        <div
                          class="ant-cascader-menus"
                        >
                          <ul
                            class="ant-cascader-menu"
                            role="menu"
                          >
                            <li
                              aria-checked="false"
                              class="ant-cascader-menu-item"
                              data-path-key="connection"
                              role="menuitemcheckbox"
                              title="Connection"
                            >
                              <span
                                class="ant-cascader-checkbox"
                              >
                                <span
                                  class="ant-cascader-checkbox-inner"
                                />
                              </span>
                              <div
                                class="ant-cascader-menu-item-content"
                              >
                                Connection
                              </div>
                            </li>
                            <li
                              aria-checked="true"
                              class="ant-cascader-menu-item"
                              data-path-key="performance"
                              role="menuitemcheckbox"
                              title="Performance"
                            >
                              <span
                                class="ant-cascader-checkbox ant-cascader-checkbox-checked"
                              >
                                <span
                                  class="ant-cascader-checkbox-inner"
                                />
                              </span>
                              <div
                                class="ant-cascader-menu-item-content"
                              >
                                Performance
                              </div>
                            </li>
                            <li
                              aria-checked="false"
                              class="ant-cascader-menu-item"
                              data-path-key="infrastructure"
                              role="menuitemcheckbox"
                              title="Infrastructure"
                            >
                              <span
                                class="ant-cascader-checkbox"
                              >
                                <span
                                  class="ant-cascader-checkbox-inner"
                                />
                              </span>
                              <div
                                class="ant-cascader-menu-item-content"
                              >
                                Infrastructure
                              </div>
                            </li>
                          </ul>
                        </div>
                        <div
                          class="styledComponents__ButtonDiv-sc-9z6ynb-1 kNCyfI"
                        >
                          <button
                            class="ant-btn ant-btn-default ant-btn-sm styledComponents__Button-sc-zk1lj8-0 eAazoW"
                            type="button"
                          >
                            <span>
                              Cancel
                            </span>
                          </button>
                          <button
                            ant-click-animating-without-extra-node="false"
                            class="ant-btn ant-btn-primary ant-btn-sm styledComponents__Button-sc-zk1lj8-0 bxQmA-d"
                            type="button"
                          >
                            <span>
                              Apply
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-clear"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="close-circle"
                    class="anticon anticon-close-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
            <div
              class="ant-col ant-col-8"
              style="padding: 3px 3px 3px 3px;"
            >
              <div
                class="ant-select ant-cascader styledComponents__Cascader-sc-9z6ynb-0 iuIJOH ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                style="max-width: 165px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1; order: 0;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                  <span
                    class="ant-select-selection-placeholder"
                  >
                    All Types
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
            <div
              class="ant-col ant-col-8"
              style="padding: 3px 3px 3px 3px;"
            >
              <div
                class="ant-select ant-cascader styledComponents__Cascader-sc-9z6ynb-0 iuIJOH ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                style="max-width: 165px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1; order: 0;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                  <span
                    class="ant-select-selection-placeholder"
                  >
                    All Radios
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-24"
          style="padding: 8px 8px 8px 8px;"
        >
          <div
            class="ant-collapse ant-collapse-icon-position-start ant-collapse-borderless ant-collapse-ghost"
          >
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="styledComponents__StyledPlusSquareOutlined-sc-hmshlr-7 iWQXdq ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  <span
                    class="styledComponents__TimelineTitle-sc-hmshlr-9 dVavPp"
                  >
                    Connection Events
                  </span>
                </span>
              </div>
            </div>
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="styledComponents__StyledPlusSquareOutlined-sc-hmshlr-7 iWQXdq ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  <span
                    class="styledComponents__TimelineTitle-sc-hmshlr-9 dVavPp"
                  >
                    Roaming
                  </span>
                </span>
              </div>
            </div>
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="styledComponents__StyledPlusSquareOutlined-sc-hmshlr-7 iWQXdq ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  <span
                    class="styledComponents__TimelineTitle-sc-hmshlr-9 dVavPp"
                  >
                    Connection Quality
                  </span>
                </span>
              </div>
            </div>
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="styledComponents__StyledPlusSquareOutlined-sc-hmshlr-7 iWQXdq ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  <span
                    class="styledComponents__TimelineTitle-sc-hmshlr-9 dVavPp"
                  >
                    Network Incidents
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-6"
      style="padding: 8px 8px 8px 8px;"
    >
      <div
        class="styledComponents__History-sc-hmshlr-0 fbrcHL"
      >
        <div
          class="styledComponents__HistoryHeader-sc-hmshlr-1 gxxomy"
        >
          <span
            class="styledComponents__HistoryContentTitle-sc-hmshlr-3 kdrcWS"
          >
            History
          </span>
          <span
            class="styledComponents__HistoryIcon-sc-hmshlr-4 bpPEdb"
          >
            <svg
              data-testid="ArrowExpand"
              style="transform: rotate(180deg); cursor: pointer; line-height: 20px;"
            />
          </span>
        </div>
        <div
          class="styledComponents__HistoryContent-sc-hmshlr-2 cUGlmL"
        >
          <div
            class="ant-list ant-list-split"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <ul
                  class="ant-list-items"
                >
                  <li
                    class="ant-list-item"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <span
                          class="styledComponents__EventTypeIcon-sc-hmshlr-5 haoSVP"
                          color="--acx-semantics-green-50"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          06/07/2022 11:21:48
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          Infrastructure (Service availabilty)
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <span
                          class="styledComponents__EventTypeIcon-sc-hmshlr-5 wBlry"
                          color="--acx-neutrals-50"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          06/07/2022 11:21:48
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          Client assiocated (802.11) @ Home_R860 (AA:BB:CC:DD:FF:GG)
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <span
                          class="styledComponents__IncidentEvent-sc-hmshlr-6 hEsQOF"
                          color="--acx-semantics-red-50"
                        >
                          P1
                        </span>
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          06/07/2022 11:21:48
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          Client assiocated (802.11) @ Home_R860 (AA:BB:CC:DD:FF:GG)
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
